# apontamentos-api

./: .env.db  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  pyproject.toml  setup-docker.-prod.sh
.github/workflows/: deploy.yml  deploy_V01.yml
alembic/: env.py
alembic/versions/: 9b04caf050d3_add_indexes_atividades.py  cb0a3479e4f0_unique_index_atividades_nome_ci.py  d2fbb0ae9bbd_baseline.py  e43a9efa1956_create_table_atividades.py
apontamentos_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: database.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/models/: atividade.py  example.py
app/routers/: atividades.py
app/schemas/: atividade.py
app/security/: hmac.py  jwks_cache.py  jwt.py
tests/: test_health.py
